<resources>
    <string name="app_name">NYTimes Search</string>

    <!-- Search Activity -->
    <string name="action_search">Search</string>
    <string name="action_settings">Filter</string>
    <string name="action_saved">Saved Articles</string>
    <string name="et_search_hint">Enter search query</string>
    <string name="search">Search</string>

    <!-- Filter Options -->
    <string name="filter_name">Search Filters</string>
    <string name="begin_date">Begin Date</string>
    <string name="begin_date_hint">Select a date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk">News Desk Values</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sort_none">None</string>
    <string name="sort_oldest">Oldest</string>
    <string name="sort_newest">Newest</string>
    <string-array name="sort_order_array">
        <item>@string/sort_none</item>
        <item>@string/sort_newest</item>
        <item>@string/sort_oldest</item>
    </string-array>
    <string name="arts">Arts</string>
    <string name="fashion">Fashion &amp; Style</string>
    <string name="sports">Sports</string>

    <!-- Article Activity -->
    <string name="action_save">Save</string>
    <string name="action_unsave">Un-save</string>
    <string name="action_share">Share</string>

    <!-- Saved Articles Activity -->
    <string name="saved_articles">Saved Articles</string>

    <!-- Internet Connectivity -->
    <string name="error_network">No network connectivity.</string>
    <string name="error_offline">No internet connectivity.</string>
</resources>
