<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.huyentran.nytsearch.activities.SearchActivity">

    <item android:id="@+id/action_search"
          android:orderInCategory="5"
          android:title="@string/action_search"
          android:icon="@drawable/icon_search"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/miFilter"
        android:icon="@drawable/icon_filter"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:orderInCategory="10" />

    <item
        android:id="@+id/miSaved"
        android:icon="@drawable/icon_heart_filled"
        android:title="@string/action_saved"
        app:showAsAction="always"
        android:orderInCategory="15" />
</menu>
