<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.huyentran.nytsearch.activities.ArticleActivity">

    <group android:id="@+id/group_heart_empty">
        <item
            android:id="@+id/miSave"
            android:icon="@drawable/icon_heart_empty"
            android:title="@string/action_save"
            app:showAsAction="ifRoom"
            android:orderInCategory="5" />
    </group>

    <group android:id="@+id/group_heart_filled">
        <item
            android:id="@+id/miUnSave"
            android:icon="@drawable/icon_heart_filled"
            android:title="@string/action_unsave"
            app:showAsAction="ifRoom"
            android:orderInCategory="5" />
    </group>

    <item
        android:id="@+id/miShare"
        app:showAsAction="ifRoom"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:orderInCategory="10"/>

</menu>